--- a/app/src/main/res/layout/cart_items_layout.xml
+++ b/app/src/main/res/layout/cart_items_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorGrey2"
+    android:background="@color/colorPrimaryWhite"
     android:orientation="vertical">
 
 
@@ -23,7 +23,7 @@
             android:id="@+id/iv_image_cart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <TextView
