--- a/app/src/main/res/layout/product_items_layout.xml
+++ b/app/src/main/res/layout/product_items_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorGrey2">
+    android:background="@color/colorPrimaryWhite">
 
     <TextView
         android:id="@+id/product_price_item"
